--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple GitHub Page</title>
+    <title>Tax calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My GitHub Page!</h1>
+    <header class="transparent-header">
+        <h1>Tax Calculator</h1>
     </header>
     <main>
         <section>
             <h2>About</h2>
-            <p>This page is hosted on GitHub Pages.</p>
+            <p>Just calculate your tax without any hesitations!<br>No storage of personal stacks</p>
         </section>
         <section>
             <h2>Contact</h2>
@@ -21,7 +21,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>&copy; 2024 Building community </p>
     </footer>
 </body>
 </html>
