added 3 active income file

--- a/active.html
+++ b/active.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Active Income</title>
+    <link rel="stylesheet" href="active.css">
 </head>
 <body>
-    <p>Active</p>
+    <header>
+        <h1>Active Income</h1>
+    </header>
+    
+    <main>
+        <div class="income-form">
+            <label for="income-input">Enter your income:</label>
+            <input type="number" id="income-input" placeholder="Enter amount in INR">
+            <button type="button" onclick="submitIncome()">Submit</button>
+        </div>
+    </main>
+    
+    <script src="active.js"></script>
 </body>
 </html>
