--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
     </header>
     <div class="content"></div>
     <main>
+        <h1>Please select your income type from the options below:</h1>
         <div class="container">
             <a href="active.html" class="box" target="_blank"><b>Active</b></a>
             <a href="passive.html" class="box" target="_blank"><b>Passive</b></a>
         </div>
         <section id="about">
-            <h2 class="abt">About</h2>
-            <p>Just calculate your tax without any hesitations!<br>No storage of personal stacks.</p>
+            <h2 class="abt">Note:-</h2>
+            <ul class="list", type="square">
+                <li>All tax are calculated as per new tax regime (FY 2024-25).</li>
+                <li>For this site, Your age is by default less than 60 yrs.</li>
+                <li>Do not include Tax free Income (eg: Agricultural Income, Gifts from <br>Consanguineous Relatives or Scholarships etc).</li>
+                <li>And, Just calculate your tax without any hesitations!</li>
+                <li>No storage of personal stacks.</li>
+                
+            </ul>
         </section>
         <section id="contact">
             <h2 class="con">Contact</h2>
