done with active.css untracked file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul class="list", type="square">
                 <li>All tax are calculated as per new tax regime (FY 2024-25).</li>
                 <li>For this site, Your age is by default less than 60 yrs.</li>
-                <li>Do not include Tax free Income (eg: Agricultural Income, Gifts from <br>Consanguineous Relatives or Scholarships etc).</li>
+                <li>Do not include Tax free Income (eg: Agricultural Income, Gifts from Consanguineous Relatives or Scholarships etc).</li>
                 <li>And, Just calculate your tax without any hesitations!</li>
                 <li>No storage of personal stacks.</li>
                 
